--- a/config.toml
+++ b/config.toml
@@ -12,5 +12,7 @@ build_search_index = true
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
 highlight_theme = "ascetic-white"
-[extra]
+
 # Put all your custom variables here
+[extra]
+commenting_system_public_api_key = "whofsy1k3j3emtnp5ltys8jd79u8x8"
